# consuelo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
consuelo/: __init__.py  __main__.py  archive.py  cli.py  config.py  drive.py  embedding_cache.py  llm.py  pipeline.py  rendering.py  sources.py  state.py  vector.py
docs/: architecture.md  automation.md  configuration.md  pipeline.md  sources.md
prompts/: ask.txt  classify.txt  place.txt  recap.txt  tags.txt
scripts/: nomic-8k.Modelfile  reclassify_existing.py
second_brain/: __init__.py  __main__.py  archive.py  cli.py  config.py  drive.py  embedding_cache.py  llm.py  models.py  pipeline.py  rendering.py  sources.py  state.py  vector.py
tests/: conftest.py  test_archive.py  test_rendering.py  test_sources.py  test_state.py
vault/.cache/: embeddings.db
vault/.config/: feeds.json
vault/.obsidian/: graph.json  workspace.json
vault/Daily/: 2026-05-10.md
vault/Notes/Finance/: American-agriculture-is-broken.md  Europes-oil-majors-reap-up-to-475bn-from-trading-on-Iran-war-volatility.md  Trump-Iran-inaccettabile-Brent-a-105-Asia-mista-Kospi-record-Verso-Trump-XI-Morning-Finance.md
vault/Notes/Tech/: How-lakebase-architecture-delivers-5x-faster-Postgres-writes.md  Life-without-US-tech.md
vault/Notes/articles/2026-05-11/: Life without US tech.md
vault/Notes/youtube/2026-05-10/: 2026-05-11_316. Più rendimento con meno rischio? Quando la leva migliora il portafoglio.md
